@@ -18,6 +18,7 @@
   * Manual sign_in now triggers remember token
   * Be sure to halt strategies on failures
   * Consider SCRIPT_NAME on Omniauth paths
+  * Reset failed attempts when lock is expired
 
 * deprecations
   * Deprecated anybody_signed_in? in favor of signed_in? (by github.com/gavinhughes)
